--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MERN1",
+  "name": "assignment1",
   "version": "1.0.0",
   "scripts": {
     "client": "cd frontend && yarn start",
@@ -7,18 +7,17 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.4.1",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
-    "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0",
-    "popper.js": "^1.16.1",
-    "query-string": "^6.11.0",
-    "react-router-dom": "^5.1.2"
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3"
   }
 }
